--- a/hugo.toml
+++ b/hugo.toml
@@ -20,3 +20,6 @@ theme = 'imbigo-theme'
     name = "Code"
     url = "/code/"
     weight = 3
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
